<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/pick"/>

    <RadioGroup
        android:id="@+id/size_group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/short_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/short_size"/>

        <RadioButton
            android:id="@+id/tall_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tall_size"/>

        <RadioButton
            android:id="@+id/grande_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/grande_size"/>

        <RadioButton
            android:id="@+id/venti_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/venti_size"/>

    </RadioGroup>

    <Button
        android:id="@+id/americano"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/americano"
        android:onClick="getAmericano"/>

    <Button
        android:id="@+id/espresso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/espresso"
        android:onClick="getEspresso"/>

    <Button
        android:id="@+id/cas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/caramel"
        android:onClick="getCAS"/>

    <Button
        android:id="@+id/hot_chocolate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/hot_chocolate"
        android:onClick="getHotChocolate"/>

    <Button
        android:id="@+id/iced_drinks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/iced_drinks"
        android:onClick="getIcedDrinks"/>

    <Button
        android:id="@+id/syrup_pumps"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/syrup_pumps"
        android:onClick="getSyrupPumps"/>

    <Button
        android:id="@+id/misc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/misc"
        android:onClick="getMisc"/>

</LinearLayout>
